k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: music-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: daracoo/music-album-tracker-backend:latest
          imagePullPolicy: Never  # Use local image
          ports:
            - containerPort: 4000
          command: ["sh", "-c", "npx prisma migrate deploy && npm run dev"]
