k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: music-app
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: backend
