k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: music-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: db
